--- a/data.html
+++ b/data.html
@@ -18,49 +18,49 @@
   <div id="chartWrap">
     <ul>
       <li class="holder-parent">
-        <h4>Top Library<br> Usage</h4>
+        <h4>Most Popular Libraries<br> (% penetration)</h4>
         <div class="holder bar">
           <canvas id="topLib" width="235" height="235"/>
         </div>
       </li>
 
       <li class="holder-parent">
-        <h4>Top Script<br> Usage</h4>
+        <h4>Most Popular Scripts<br> (% penetration)</h4>
         <div class="holder">
           <canvas id="topScript" width="210" height="210"/>
         </div>
       </li>
 
       <li class="holder-parent">
-        <h4>Top MVC Framework <br> Homepage Usage</h4>
+        <h4>Most Popular MVCs <br> (Homepage Penetration)</h4>
         <div class="holder">
           <canvas id="topMVC" width="210" height="210"/>
         </div>
       </li>
 
       <li class="holder-parent">
-        <h4>Top Analytics<br> Services</h4>
+        <h4>Most Popular Analytics<br> (% penetration)</h4>
         <div class="holder">
           <canvas id="topAnalytics" width="210" height="210"/>
         </div>
       </li>
 
       <li class="holder-parent">
-        <h4>Top A/B Testing<br> Services</h4>
+        <h4>A/B Testing Comparison<br> (% penetration)</h4>
         <div class="holder bar">
           <canvas id="topAB" width="235" height="235"/>
         </div>
       </li>
 
       <li class="holder-parent">
-        <h4>Top Live Chat<br> Services</h4>
+        <h4>Live Chat Comparison<br> (% penetration)</h4>
         <div class="holder bar">
           <canvas id="topChat" width="235" height="235"/>
         </div>
       </li>
 
       <li class="holder-parent">
-        <h4>Top CMS<br> Usage</h4>
+        <h4>CMS Comparison<br> (Homepage Penetration)</h4>
         <div class="holder bar">
           <canvas id="topCMS" width="235" height="235"/>
         </div>
@@ -68,20 +68,21 @@
     </ul>
   </div>
 
-
-	<!-- <footer>
-		<div id="authors">
-			<a class="footer-text" href="http://twitter.com/shapiro">Julian Shapiro</a>
-			<span class="footer-text--divider">+</span>
-			<a class="footer-text" href="http://twitter.com/neutralthoughts">Thomas Davis</a>
-		</div>
-		
-		<div id="sponsors">
-			<a href="#"><img id="stripe" src="images/stripe.png" /></a>
-			<span class="footer-text--divider">+</span>
-			<a href="#"><img id="digitealocean" src="images/digitalocean.png" /></a>
-		</div>
-	</footer> -->
+  <footer>
+    <div id="authors">
+      <a class="footer-text" href="http://twitter.com/shapiro">Julian Shapiro</a>
+      <span class="footer-text--divider">+</span>
+      <a class="footer-text" href="http://twitter.com/neutralthoughts">Thomas Davis</a>
+      <span class="footer-text--divider">+</span>
+      <a class="footer-text" href="http://twitter.com/chasingUX">Jesse Chase</a>
+    </div>
+    
+    <div id="sponsors">
+      <a href="https://stripe.com" id="stripe"/></a>
+      <span class="footer-text--divider">+</span>
+      <a href="https://digitalocean.com" id="digitalocean"/></a>
+    </div>
+  </footer> 
 
 	<script src="js/jquery.min.js"></script>
   <script src="js/Chart.min.js"></script>
