--- a/site/data.html
+++ b/site/data.html
@@ -32,7 +32,7 @@
       </li>
 
       <li class="holder-parent">
-        <h4>Most Popular MVCs <br> (Homepage Penetration)</h4>
+        <h4>Most Popular MVCs <br> (Homepage % Penetration)</h4>
         <div class="holder">
           <canvas id="topMVC" width="210" height="210"/>
         </div>
@@ -60,7 +60,7 @@
       </li>
 
       <li class="holder-parent">
-        <h4>CMS Comparison<br> (Homepage Penetration)</h4>
+        <h4>CMS Comparison<br> (Homepage % Penetration)</h4>
         <div class="holder bar">
           <canvas id="topCMS" width="235" height="235"/>
         </div>
@@ -91,5 +91,15 @@
 	<script src="js/velocity.ui.custom.min.js"></script>
 	<script src="js/numeral.min.js"></script>
   <script src="js/charts.js"></script>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-50550635-2', 'auto');
+    ga('send', 'pageview');
+  </script>
 </body>
 </html>
