--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Libscore</title>
 	<link href="css/normalize.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
+	<meta name="description" content="Libscore scans the top million sites on the web to collect 
+stats on JavaScript library usage.">
 </head>
 <body>
 	<div id="searchSymbols"></div>
@@ -39,7 +41,7 @@
 
 			<div id="howTo">
 				<p>
-					<strong>In the search box above</strong>, enter the case-sensitive variable that a library exposes itself as, e.g. <b data-query>Modernizr</b>, <b data-query>$.ui</b>, or <b data-query>$.fn.fancybox</b>.
+					<strong>In the search box above</strong>, enter the case-sensitive variable that a library exposes itself as, e.g. <b data-query>jQuery</b>, <b data-query>Modernizr</b>, <b data-query>$.ui</b>, or <b data-query>$.fn.fancybox</b>.
 				</p>
 				<p>
 					You can also search for sites containing an external script by prefixing a query with <i>script:</i>, e.g. <b data-query>script:stats.wp.com</b> or <b data-query>script:use.typekit.net</b>.
