--- a/site/index.html
+++ b/site/index.html
@@ -69,7 +69,7 @@ stats on JavaScript library usage.">
 		</form>
 	</div>
 
-	<div id="data_scroll">↓</div>
+	<div id="data_scroll"></div>
 
 	<div id="data">
 		<div id="col_wrap">
