--- a/site/index.html
+++ b/site/index.html
@@ -39,7 +39,7 @@ stats on JavaScript library usage.">
 				</div>
 			</div>
 
-			<a href="#" class="learnMore">How do I use Libscore?</a>
+			<a href="#" class="directions"><span>How do I use libscore?</span></a>
 
 			<div id="howTo">
 				<p class="main">
