--- a/site/data.html
+++ b/site/data.html
@@ -14,42 +14,46 @@
     <div id="header-logo">
       <a href="index.html">Libsc<o>o<span></span></o>re</a>
     </div>
-    <h1>The current state of Javascript</h1>
+    <!-- <h1>The current state of Javascript</h1> -->
+    <a class="back" href="../">Back to Search</a>
   </header>
 
-  <div class="chart-wrapper">
-    <div role="tabpanel" class="tab-left">
 
-    <div id="chart-nav">
-      <ul class="nav nav-tabs" role="tablist">
-        <li class="label"><label>Popularity</label></li>
-        <li role="presentation" class="active below-label">
-          <a href="#pop1" data-trigger="topLib">
-            Libraries</a>
-        </li>
-        <li role="presentation">
-          <a href="#pop2" data-trigger="topScript">Scripts</a>
-        </li>
-        <li role="presentation">
-          <a href="#pop3" data-trigger="topMVC">MVCs</a>
-        </li>
-        <li role="presentation">
-          <a href="#pop4" data-trigger="topAnalytics">Analytics</a>
-        </li>
-        <li class="label"><label>Comparisons</label></li>
-        <li role="presentation" class="below-label">
-          <a href="#comp1" data-trigger="topCMS">
-            CMS</a>
-        </li>
-        <li role="presentation">
-          <a href="#comp2" data-trigger="topChat">Live Chat</a>
-        </li>
-        <li role="presentation">
-          <a href="#comp3" data-trigger="topAB">A/B Testing</a>
-        </li>
-      </ul>
-    </div>
+  <div id="chart-nav">
+    <ul class="nav nav-tabs" role="tablist">
+      <li class="label"><label>Popularity</label></li>
+      <li role="presentation" class="active below-label">
+        <a href="#pop1" data-trigger="topLib">
+          Libraries</a>
+      </li>
+      <li role="presentation">
+        <a href="#pop2" data-trigger="topScript">Scripts</a>
+      </li>
+      <li role="presentation">
+        <a href="#pop3" data-trigger="topMVC">MVCs</a>
+      </li>
+      <li role="presentation">
+        <a href="#pop4" data-trigger="topAnalytics">Analytics</a>
+      </li>
+      <li role="presentation">
+        <a href="#comp1" data-trigger="topCMS">
+          CMS</a>
+      </li>
+      <li role="presentation">
+        <a href="#comp2" data-trigger="topChat">Live Chat</a>
+      </li>
+      <li role="presentation">
+        <a href="#comp3" data-trigger="topAB">A/B Testing</a>
+      </li>
 
+      <li class="label"><label>Monthly Data</label></li>
+      <li class="below-label">
+        <span class="coming-soon">Coming Soon</span>
+      </li>
+    </ul>
+  </div>
+
+  <div id="chart-wrap">
     <div class="tab-content">
       <div class="padder"></div>
     </div>
