Mobile Big Fixes

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>Libscore</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="css/normalize.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
 	<link href="css/tooltips.css" rel="stylesheet">
-	<meta name="description" content="Libscore scans the top million sites on the web to collect 
-stats on JavaScript library usage.">
+	<meta name="description" content="Libscore scans the top million sites on the web to collect stats on JavaScript library usage.">
 </head>
 <body>
 	<div id="searchSymbols"></div>
