Initial Data Panel Work

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
 
 	<div id="data_scroll"></div>
 
+	<div id="data-lib">
+		Here is some stuff
+	</div>
+		
 	<div id="data">
 		<div id="col_wrap">
 			<div id="data_cols"></div>
@@ -94,6 +98,7 @@
 	<script src="js/velocity.ui.custom.min.js"></script>
 	<script src="js/numeral.min.js"></script>
 	<script src="js/jquery.tooltipster.min.js"></script>
+	<script src="js/highcharts.js"></script>
 	<script src="js/script.js"></script>
 
 	<script>
