Fixed panel issues

--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
 	<div id="data_scroll"></div>
 
 	<div id="data-lib">
+		<h3 id="data-name"></h3>
 		Here is some stuff
 	</div>
-		
+
 	<div id="data">
 		<div id="col_wrap">
 			<div id="data_cols"></div>
