--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 	<div id="data-lib">
 		<h3 id="data-name"></h3>
-		Here is some stuff
+		<div id="time-series"></div>
 	</div>
 
 	<div id="data">
@@ -101,6 +101,7 @@
 	<script src="js/jquery.tooltipster.min.js"></script>
 	<script src="js/highcharts.js"></script>
 	<script src="js/script.js"></script>
+	<script src="js/time-series.js"></script>
 
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
