--- a/site/index.html
+++ b/site/index.html
@@ -70,6 +70,7 @@
 	<div id="data-lib">
 		<h3 id="data-name"></h3>
 		<div id="time-series"></div>
+		<a class="addData" href="#">Add Some DATA!</a>
 	</div>
 
 	<div id="data">
