Major UI updates
preps UI for time series

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			</div>
 		</main>
 
-		<form 
+		<!-- <form 
 			id="subscribe_"
 			class="field hint--right"
 			action="//libscore.us9.list-manage.com/subscribe/post?u=30c0d4c5d64d5d9fcf7b76792&amp;id=69666fd115" method="post" name="mc-embedded-subscribe-form"
@@ -62,7 +62,7 @@
 				<p>Get notified when a new library surges in popularity!</p>
 				<input id="subscribe" name="EMAIL" class="field-input" type="text" placeholder="Enter Email Address" />
 			</div>
-		</form>
+		</form> -->
 	</div>
 
 	<div id="data_scroll"></div>
