--- a/site/index.html
+++ b/site/index.html
@@ -71,6 +71,7 @@
 		<h3 id="data-name"></h3>
 		<div id="time-series"></div>
 		<a class="addData" href="#">Add Some DATA!</a>
+		<a class="close">Close</a>
 	</div>
 
 	<div id="data">
@@ -87,6 +88,8 @@
 			<a class="footer-text" href="http://twitter.com/chasingUX">Jesse Chase</a>
 		</div>
 		
+		<a href="#" class="footer-chart"></a>
+
 		<div id="sponsors">
 			<a href="https://stripe.com" id="stripe"/></a>
 			<span class="footer-text--divider">+</span>
