--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	<div id="data-lib">
 		<h3 id="data-name"></h3>
 		<div id="time-series"></div>
-		<a class="addData" href="#">Add Some DATA!</a>
+		<!-- <a class="addData" href="#">Add Some DATA!</a> -->
 		<a class="close">Close</a>
 	</div>
 
