Added new lib addition to charts

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
 		<h3 id="data-name"></h3>
 		<div id="time-series"></div>
 		<!-- <a class="addData" href="#">Add Some DATA!</a> -->
+		<form class="addData">
+			<div class="loader"></div>
+			<input type="text" placeholder="Enter lib name">
+		</form>
 		<a class="close">Close</a>
 	</div>
 
