--- a/site/index.html
+++ b/site/index.html
@@ -29,8 +29,10 @@
 
 			<div id="query">
 				<div id="search_">
-					<input id="search" class="field-input" type="text" value="" placeholder="search for a JavaScript variable (case sensitive) or domain name..." />
-					<input type="submit" id="mobile-submit" value="Go">
+					<form id="mainSearch">
+						<input id="search" class="field-input" type="text" value="" placeholder="search for a JavaScript variable (case sensitive) or domain name..." />
+						<input type="submit" id="mobile-submit" value="Go">
+					</form>
 				</div>
 				<div id="queryButtons">
 					<span><p data-query="*">Top Libs</p></span>
