Better badge placement

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			<div id="query">
 				<div id="search_">
 					<form id="mainSearch">
+						<div id="badge"></div>
 						<input id="search" class="field-input" type="text" value="" placeholder="search for a JavaScript variable (case sensitive) or domain name..." />
 						<input type="submit" id="mobile-submit" value="Go">
 					</form>
