--- a/site/index.html
+++ b/site/index.html
@@ -66,6 +66,28 @@
 				<input id="subscribe" name="EMAIL" class="field-input" type="text" placeholder="Enter Email Address" />
 			</div>
 		</form> -->
+
+		<footer>
+
+			<div id="authors">
+				<a class="footer-text" href="http://twitter.com/shapiro" target="_bLank">Julian Shapiro</a>
+				<span class="footer-text--divider">/</span>
+				<a class="footer-text" href="http://twitter.com/chasingUX" target="_bLank">Jesse Chase</a>
+				<span class="footer-text--divider">/</span>
+				<a class="footer-text" href="https://twitter.com/jhchen" target="_bLank">Jason Chen</a>
+			</div>
+
+			<div id="sponsors">
+				<a href="https://stripe.com" id="stripe"/></a>
+				<span class="footer-text--divider">/</span>
+				<a href="https://digitalocean.com" id="digitalocean"/></a>
+			</div>
+			
+			<!-- <a href="#" class="footer-chart"></a> -->
+
+			
+		</footer> 
+
 	</div>
 
 	<div id="data_scroll"></div>
@@ -76,7 +98,7 @@
 		<!-- <a class="addData" href="#">Add Some DATA!</a> -->
 		<form class="addData">
 			<div class="loader"></div>
-			<input type="text" placeholder="Enter lib name">
+			<input type="text" placeholder="Enter lib to compare">
 		</form>
 		<a class="close">Close</a>
 	</div>
@@ -88,21 +110,7 @@
 		<table></table>
 	</div>
 
-	<footer>
-		<div id="authors">
-			<a class="footer-text" href="http://twitter.com/shapiro">Julian Shapiro</a>
-			<span class="footer-text--divider">+</span>
-			<a class="footer-text" href="http://twitter.com/chasingUX">Jesse Chase</a>
-		</div>
-		
-		<a href="#" class="footer-chart"></a>
-
-		<div id="sponsors">
-			<a href="https://stripe.com" id="stripe"/></a>
-			<span class="footer-text--divider">+</span>
-			<a href="https://digitalocean.com" id="digitalocean"/></a>
-		</div>
-	</footer> 
+	
 
 	<script src="js/jquery.min.js"></script>
 	<script src="js/velocity.min.js"></script>
