--- a/site/index.html
+++ b/site/index.html
@@ -96,10 +96,14 @@
 		<h3 id="data-name"></h3>
 		<div id="time-series"></div>
 		<!-- <a class="addData" href="#">Add Some DATA!</a> -->
-		<form class="addData">
-			<div class="loader"></div>
-			<input type="text" placeholder="Enter lib to compare">
-		</form>
+
+		<div class="bottomCompare">
+			<h3>Compare Data</h3>
+			<form class="addData">
+				<div class="loader"></div>
+				<input type="text" placeholder="Enter another library to compare this one against">
+			</form>
+		</div>
 		<a class="close">Close</a>
 	</div>
 
