added potential slide out panel

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 	<div id="data_scroll"></div>
 
 	<div id="data-lib">
+		<a href="#" class="closePanel">open</a>
 		<h3 id="data-name"></h3>
 		<div id="time-series"></div>
 		<div class="bottomCompare">
@@ -100,6 +101,7 @@
 	</div>
 
 	<div id="data">
+		<a href="#" class="closePanel">close</a>
 		<div id="col_wrap">
 			<div id="data_cols"></div>
 		</div>
