--- a/site/index.html
+++ b/site/index.html
@@ -87,7 +87,7 @@
 	<div id="data_scroll"></div>
 
 	<div id="data-lib">
-		<a href="#" class="closePanel">open</a>
+		<a href="#" class="closePanel">Open Results</a>
 		<h3 id="data-name"></h3>
 		<div id="time-series"></div>
 		<div class="bottomCompare">
@@ -97,7 +97,7 @@
 				<input type="text" placeholder="Enter another library to compare this one against">
 			</form>
 		</div>
-		<a class="close">Close</a>
+		<a class="close">Close Results</a>
 	</div>
 
 	<div id="data">
