Added dropdown autosuggest to main search

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 				<div id="search_">
 					<form id="mainSearch">
 						<div id="badge"></div>
-						<input id="search" class="field-input" type="text" value="" placeholder="search for a JavaScript variable (case sensitive) or domain name..." />
+						<input id="search" class="field-input" type="text" value="" autocomplete="off" placeholder="search for a JavaScript variable (case sensitive) or domain name..." />
 						<input type="submit" id="mobile-submit" value="Go">
+						<div id="dropDown"><span class="loader"></span><ul></ul></div>
 					</form>
 				</div>
 				<div id="queryButtons">
