--- a/site/index.html
+++ b/site/index.html
@@ -33,7 +33,7 @@
 						<div id="badge"></div>
 						<input id="search" class="field-input" type="text" value="" autocomplete="off" placeholder="search for a JavaScript variable (case sensitive) or domain name..." />
 						<input type="submit" id="mobile-submit" value="Go">
-						<div id="dropDown"><span class="loader"></span><ul></ul></div>
+						<div id="dropDown"><span class="loader"></span><h3 class="lib"></h3><ul class="lib"></ul><h3 class="script"></h3><ul class="script"></ul></div>
 					</form>
 				</div>
 				<div id="queryButtons">
