--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<p class="main">
 					<strong>In the search box above</strong>, enter the case-sensitive variable that a library exposes itself as, e.g. <b data-query>jQuery</b>, <b data-query>Modernizr</b>, <b data-query>$.ui</b>, or <b data-query>$.fn.fancybox</b>.
 				</p>
-				<p class="popover">You can also query <span id="script-tip">scripts</span> and <span id="domain-tip">domain names</span> or <a id="view_trending_data" href="data.html">View Trending Data</a></p>	
+				<p class="popover">You can also query <span id="script-tip">scripts</span> and <span id="domain-tip">domain names</span></p>	
 			</div>
 		</main>
 
@@ -94,7 +94,7 @@
 			<h3 class="bigNumber"></h3>
 		</div>
 		<div class="bottomCompare">
-			<h3>Compare Data</h3>
+			<h3>Compare against another library or script</h3>
 			<form class="addData">
 				<div class="loader"></div>
 				<input type="text" placeholder="Enter another library to compare this one against">
