--- a/site/index.html
+++ b/site/index.html
@@ -118,6 +118,8 @@
 	<script src="js/numeral.min.js"></script>
 	<script src="js/jquery.tooltipster.min.js"></script>
 	<script src="js/highcharts.js"></script>
+	<script src="js/jquery.history.js"></script>
+
 	<script src="js/script.js"></script>
 
 	<script>
