--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<link href="css/main.css" rel="stylesheet">
 	<link href="css/tooltips.css" rel="stylesheet">
 	<meta name="description" content="Libscore scans the top million sites on the web to collect stats on JavaScript library usage.">
+
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<div id="searchSymbols"></div>
@@ -118,9 +121,6 @@
 	<script src="js/numeral.min.js"></script>
 	<script src="js/jquery.tooltipster.min.js"></script>
 	<script src="js/highcharts.js"></script>
-
-	<script src="js/jquery.history.js"></script>
-
 	<script src="js/script.js"></script>
 
 	<script>
