--- a/site/index.html
+++ b/site/index.html
@@ -107,7 +107,7 @@
 	</div>
 
 	<div id="data">
-		<!-- <a href="#" class="closePanel">close</a> -->
+		<a href="#" class="showChart">Show Chart</a>
 		<div id="col_wrap">
 			<div id="data_cols"></div>
 		</div>
