small bug fixes

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 			<div id="howTo">
 				<p class="main">
-					<strong>In the search box above</strong>, enter the case-sensitive variable that a library exposes itself as, e.g. <b data-type="lib" data-query>jQuery</b>, <b data-type="lib" data-query>Modernizr</b>, <b data-type="lib" data-query>$.ui</b>, or <b data-type="lib" data-query>$.fn.fancybox</b>.
+					<strong>In the search box above</strong>, enter the case-sensitive variable that a library exposes itself as, e.g. <b data-type="lib" data-query>jQuery</b>, <b data-type="lib" data-query>Modernizr</b>, <b data-type="lib" data-query>$.ui</b>, or <b data-type="lib" data-query>$.fn.fancybox</b>
 				</p>
 				<p class="popover">You can also query <span id="script-tip">scripts</span> and <span id="domain-tip">domain names</span></p>	
 			</div>
