--- a/site/compare.html
+++ b/site/compare.html
@@ -6,13 +6,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="css/normalize.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
+	<link href="css/compare.css" rel="stylesheet">
 	<link href="css/tooltips.css" rel="stylesheet">
 	<meta name="description" content="Libscore scans the top million sites on the web to collect stats on JavaScript library usage.">
 
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body>
+<body class="results compare">
 	<div id="searchSymbols"></div>
 
 	<div id="searchWrap">
@@ -54,21 +55,6 @@
 				<p class="popover">You can also query <span id="script-tip">scripts</span> and <span id="domain-tip">domain names</span></p>	
 			</div>
 		</main>
-
-		<!-- <form 
-			id="subscribe_"
-			class="field hint--right"
-			action="//libscore.us9.list-manage.com/subscribe/post?u=30c0d4c5d64d5d9fcf7b76792&amp;id=69666fd115" method="post" name="mc-embedded-subscribe-form"
-			target="_blank"
-			novalidate
-		>
-
-			<input type="text" name="b_30c0d4c5d64d5d9fcf7b76792_69666fd115" tabindex="-1" style="position: absolute; left: -1000000px">
-			<div>
-				<p>Get notified when a new library surges in popularity!</p>
-				<input id="subscribe" name="EMAIL" class="field-input" type="text" placeholder="Enter Email Address" />
-			</div>
-		</form> -->
 	</div>
 
 	<footer>
@@ -87,17 +73,13 @@
 		</div>
 	</footer> 
 
-	<div id="data_scroll"></div>
-
 	<div id="data-lib">
-		<!-- <a href="#" class="closePanel">Open Results</a> -->
 		<div class="center-header">
 			<h3 id="data-name"></h3>
 			<div class="badge-container"></div>
 		</div>
 		<div id="time-series">
 			<div class="chartHolder"></div>
-			<h3 class="bigNumber"></h3>
 		</div>
 		<div class="bottomCompare">
 			<h3>Compare against another library or script</h3>
@@ -106,16 +88,9 @@
 				<input type="text" placeholder="Enter another library to compare this one against">
 			</form>
 		</div>
-		<!-- <a class="close">Close Results</a> -->
 	</div>
 
-	<div id="data">
-		<a href="#" class="showChart"><span>Show Chart</span></a>
-		<div id="col_wrap">
-			<div id="data_cols"></div>
-		</div>
-		<table></table>
-	</div>
+
 
 	<script src="js/jquery.min.js"></script>
 	<script src="js/velocity.min.js"></script>
@@ -124,7 +99,7 @@
 	<script src="js/numeral.min.js"></script>
 	<script src="js/jquery.tooltipster.min.js"></script>
 	<script src="js/highcharts.js"></script>
-	<script src="js/script.js"></script>
+	<script src="js/compare.js"></script>
 	<script src="js/dropdown.js"></script>
 
 	<script>
